cristhian: added update meeting, and added unit test coverage